# docs/swagger.json
@@ -4275,12 +4275,12 @@
                         "required": true
                     },
                     {
-                        "description": "User Profile",
+                        "description": "User Profile Update with optional roles and groups",
                         "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/users.UserProfileUpdate"
                         }
                     }
                 ],
@@ -5089,6 +5089,26 @@
                 },
                 "user_id": {
                     "type": "string"
+                }
+            }
+        },
+        "users.UserProfileUpdate": {
+            "type": "object",
+            "properties": {
+                "groups_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "roles_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "user": {
+                    "$ref": "#/definitions/models.User"
                 }
             }
         },
